# the-one-plan

api/: .env  Cargo.toml  Rocket.toml
api/migrations/2023-04-24-145645_auth/: down.sql  up.sql
api/migrations/2023-06-19-104847_goals/: down.sql  up.sql
api/scripts/: build_and_deploy.sh  clean_up.sh  vignette-api.service
api/src/: api.rs  lib.rs  main.rs  models.rs  schema.rs  services.rs  utils.rs
api/src/api/: guard.rs  v1.rs
api/src/api/v1/: auth.rs  goals.rs
api/src/models/: auth.rs  goals.rs
api/src/services/: auth.rs  config.rs  goals.rs
api/tests/: utils.rs
ui/: package.json  vite.config.ts
ui/src/: index.css
ui/src/api/: auth.ts  goal.ts  index.ts
ui/src/components/Containers/: index.module.scss  index.tsx
ui/src/pages/: index.tsx
ui/src/pages/CreateGoal/: index.module.scss  index.tsx
ui/src/pages/EditGoal/: index.tsx
ui/src/pages/Home/: index.module.scss  index.tsx
ui/src/pages/Layout/: index.module.scss  index.tsx
ui/src/pages/Login/: index.tsx
ui/src/pages/Register/: index.tsx
ui/src/styles/: _mixins.scss
ui/src/types/: auth.ts  goals.ts  index.ts
