[package]
name = "vignette"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
bcrypt = "0.14.0"
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.0.4", features = ["chrono","postgres"] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
dotenv = "0.15.0"
dyn-clone = "1.0.11"
envconfig = "0.10.0"
http-auth-basic = "0.3.3"
itertools = "0.10.5"
rocket = { version = "=0.5.0-rc.3", features = ["secrets", "json"] }
serde =  { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
uuid = { version = "1.3.1", features = ["v4"] }
